--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,6 @@
 [tox]
 envlist = py36,py37
+skip_missing_interpreters=True
 
 [testenv]
-deps=nose
-commands=nosetests
-
-[testenv:py27]
-deps=pytest
-commands=pytest
+commands=python -m unittest discover
