add examples, update DjangoWorker, add directory loader

--- a/axju/worker/django/templates/project.template
+++ b/axju/worker/django/templates/project.template
@@ -1,4 +1,4 @@
-cd {{ folder }}
+cd "{{ folder }}"
 source venv/bin/activate
 python manage.py migrate --settings={{ setting }}
 python manage.py collectstatic --noinput --settings={{ setting }}
