--- a/axju/worker/django/templates/nginx-setup.template
+++ b/axju/worker/django/templates/nginx-setup.template
@@ -1,4 +1,4 @@
-mkdir {{ folder }}/logs
+mkdir "{{ folder }}/logs"
 sudo ln -s /etc/nginx/sites-available/{{ project }} /etc/nginx/sites-enabled/{{ project }}
 sudo rm /etc/nginx/sites-enabled/default
 sudo service nginx restart
